fix: Recommendation Service 코드 변경, 공통 에러코드 추가